# adk-samples

python/agents/machine-learning-engineering/: .gitignore  AGENT_FACTORY_README.md  CLAUDE.md  DEPENDENCY_BEST_PRACTICES.md  DEPENDENCY_MANAGEMENT.md  MIGRATION_GUIDE.md  pyproject.toml  simple_provider_test.py  test-multi-provider-setup.py  test_agent_factory.py  test_backward_compatibility.py  test_backward_compatibility_simulation.py  test_config_enhancement.py  test_cost_optimization.py  test_cost_optimization_direct.py  test_dependency_installation.py  test_environment_strategy.py  test_model_performance_routing.py  test_model_routing_direct.py  test_provider_abstraction.py
python/agents/machine-learning-engineering/machine_learning_engineering/: agent.py
python/agents/machine-learning-engineering/machine_learning_engineering/shared_libraries/: agent_factory.py  backward_compatibility.py  config.py  config_bridge.py  cost_optimization_strategy.py  debug_util.py  environment_manager.py  llm_providers.py  model_performance_router.py
python/agents/machine-learning-engineering/machine_learning_engineering/shared_libraries/providers/: __init__.py  anthropic_provider.py  aws_bedrock_provider.py  azure_openai_provider.py  cohere_provider.py  deepseek_provider.py  fireworks_provider.py  google_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  perplexity_provider.py  replicate_provider.py  together_provider.py
python/agents/machine-learning-engineering/machine_learning_engineering/sub_agents/initialization/: agent.py
